tests/NormalTests/paczka1/small_fuzzy/81226155.err
Error in line 2: 0tlcf A290 7,5
Error in line 7: RAyhi A290 94,2
Error in line 3: htN A290 91,7
